<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="monospace"
        android:text="@string/personalText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/nameText"/>
    <EditText
        android:id="@+id/nameTextEdit"
        android:layout_width="match_parent"
        android:hint="@string/name_input"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:inputType="text"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="14sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/jobText" />

    <EditText
        android:id="@+id/jobTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:hint="@string/job_input"
        android:inputType="text"
        android:paddingBottom="10dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/descText"/>
    <EditText
        android:id="@+id/descriptionTextEdit"
        android:layout_width="match_parent"
        android:hint="@string/desc_input"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:inputType="text"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="14sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/ageTag"/>
    <EditText
        android:id="@+id/ageTextEdit"
        android:layout_width="match_parent"
        android:hint="@string/age_input"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:inputType="text"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/SubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="goToSecondActivity"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/submitText"
        android:textSize="20sp" />

</LinearLayout>