<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SecondActivity">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/pic"
                android:contentDescription="@string/picDesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/pic"
                />
        </TableLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="3dp"
                    android:text="@string/nameText"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/nameDisplayTextView"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity=""
                    android:layout_marginBottom="3dp"
                    android:text="@string/nameDef"
                    android:textSize="8pt" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="3dp"
                    android:text="@string/ageTag"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/ageDisplayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="3dp"
                    android:text="@string/ageDef"
                    android:textSize="8pt" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="3dp"
                    android:text="@string/jobText"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/occupationDisplayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="3dp"
                    android:text="@string/jobDef"
                    android:textSize="8pt" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="3dp"
                    android:text="@string/descText"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/descriptionDisplayTextView"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/bioDef"
                    android:textSize="8pt" />

            </TableRow>


        </TableLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/goBackButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:onClick="goToMainActivity"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:text="@string/backText" />


        </TableLayout>


    </LinearLayout>

</ScrollView>